날씨 격자 변환 로직, 카프카 데이터 전파시 날씨 데이터 update구조로 변경